# ezmm

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  gen_icon.py  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.json
.claude/commands/: design-review.md
.claude/hooks/: check-design-review.sh
.github/workflows/: release.yml
.serena/: project.yml
docs/: design.md  requirements.md  tasks.md
docs/design/: 01_project_schema.md  02_validation.md  03_renderer.md  04_batch.md  05_ipc.md  06_state.md  07_preview.md  08_gui.md  09_store.md  10_infra.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs  state.rs
src-tauri/src/batch/: log.rs  mod.rs  output.rs  runner.rs  sleep_guard.rs
src-tauri/src/commands/: batch.rs  dialog.rs  infra.rs  mod.rs  project.rs  settings.rs
src-tauri/src/project/: migration.rs  mod.rs  schema.rs  tests.rs  validation.rs
src-tauri/src/project/snapshots/: ezmm_lib__project__schema__tests__tests__round_trip_snapshot.snap
src-tauri/src/renderer/: codec.rs  escape.rs  filter.rs  mod.rs  probe.rs
src-tauri/src/renderer/snapshots/: ezmm_lib__renderer__codec__tests__h264_args_snapshot.snap  ezmm_lib__renderer__codec__tests__h265_args_snapshot.snap  ezmm_lib__renderer__codec__tests__vp9_args_snapshot.snap
src/__mocks__/: tauri-core.ts
src/components/: AboutDialog.svelte  BatchProgressDialog.svelte  EntryList.svelte  ExportProgressDialog.svelte  PreviewPanel.svelte  PropertiesPanel.svelte  (+4 more)
(+17 files in other folders)
