[package]
name = "ezmm"
version = "0.1.0"
edition = "2021"
rust-edition = "2021"

[[bin]]
name = "ezmm"
path = "src/main.rs"

[lib]
name = "ezmm_lib"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
indexmap = { version = "2", features = ["serde"] }
thiserror = "1"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
dunce = "1.0.5"
tauri = { version = "2", features = [] }
rfd = { version = "0.15", features = ["tokio"] }
regex = "1"
chrono = "0.4.44"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
regex = "1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true

[build-dependencies]
tauri-build = { version = "2", features = [] }
